--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,21 +3,21 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-background-balanced tabs-color-active-assertive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Login" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/login" >
+    <ion-nav-view name="tab-login"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <!-- Piano Tab -->
+  <ion-tab title="Piano" icon-off="ion-ios-analytics-outline" icon-on="ion-ios-analytics" href="#/tab/piano">
+    <ion-nav-view name="tab-piano"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Autor" icon-off="ion-ios-information-outline" icon-on="ion-ios-information" href="#/tab/autor">
+    <ion-nav-view name="tab-autor"></ion-nav-view>
   </ion-tab>
 
 
