estilos, fotos y audios

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,11 +1,22 @@
 /* Empty. Add your own CSS if you like */
 
-.signup-background {
+.login {
     background-color: #F4FA58;
+   	background-image:url('../img/logo.png');
+	background-repeat:no-repeat;
+	background-position: top;
+	background-size: auto;
 }
 
 .autor{
 	background-color: #58D3F7;
+}
+
+.fondo-piano{
+	background-image:url('../img/fondo.jpg');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
 h2{
@@ -13,8 +24,7 @@ h2{
 	text-align: center;
 }
 
-h3{
-	color:red;
+h4{
 	text-align: center;
 }
 
@@ -28,5 +38,173 @@ p{
 ion-icon{
 	color:yellow;
 	font-size: 20px;
+}
+
+
+.redondo{
+	border-radius: 100%;
+}
+
+.btn-class-left{
+ display: inline-block;
+ border:1px solid #4DB6EB;
+ color: #317596;
+ border-radius: 50px 0px 0px 50px;
+ -webkit-border-radius: 50px 0px 0px 50px;
+ -moz-border-radius: 50px 0px 0px 50px;
+ font-family: Verdana;
+ width: 75px;
+ height: auto;
+ font-size: 16px;
+ padding: 10px 40px;
+ box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ -moz-box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ -webkit-box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ text-shadow: 1px 1px 1px #C1E2FB;
+ background-image: linear-gradient(to top, darkblue, lightblue);
+ background-color: #52C3FB;
+}
+.btn-class-left:hover, .btn-class-left:active{
+ border:1px solid #46D4D9;
+ color: #317596;
+ box-shadow: inset 0px 2px 9px 0 #3989B0;
+ -moz-box-shadow: inset 0px 2px 9px 0 #3989B0;
+ -webkit-box-shadow: inset 0px 2px 9px 0 #3989B0;
+ background-color: #52C3FB;
+}
+
+
+.btn-class-right{
+ display: inline-block;
+ border:1px solid #4DB6EB;
+ color: #317596;
+ border-radius: 0px 50px 50px 0px;
+ -webkit-border-radius: 0px 50px 50px 0px;
+ -moz-border-radius: 0px 50px 50px 0px;
+ font-family: Verdana;
+ width: 75px;
+ height: auto;
+ font-size: 16px;
+ padding: 10px 40px;
+ box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ -moz-box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ -webkit-box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ text-shadow: 1px 1px 1px #C1E2FB;
+ background-image: linear-gradient(to top, darkblue, lightblue);
+ background-color: #52C3FB;
+}
+.btn-class-right:hover, .btn-class-right:active{
+ border:1px solid #46D4D9;
+ color: #317596;
+ box-shadow: inset 0px 2px 9px 0 #3989B0;
+ -moz-box-shadow: inset 0px 2px 9px 0 #3989B0;
+ -webkit-box-shadow: inset 0px 2px 9px 0 #3989B0;
+ background-color: #52C3FB;
+}
+
+.btn-class-center{
+ display: inline-block;
+ border:1px solid #4DB6EB;
+ color: #317596;
+ border-radius: 0px 0px 0px 0px;
+ -webkit-border-radius: 0px 0px 0px 0px;
+ -moz-border-radius: 0px 0px 0px 0px;
+ font-family: Verdana;
+ width: 75px;
+ height: auto;
+ font-size: 16px;
+ padding: 10px 40px;
+ box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ -moz-box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ -webkit-box-shadow: inset 0px 0px 1px 0 #FCFCFC;
+ text-shadow: 1px 1px 1px #C1E2FB;
+ background-image: linear-gradient(to top, darkblue, lightblue);
+ background-color: #52C3FB;
+}
+.btn-class-center:hover, .btn-class-center:active{
+ border:1px solid #46D4D9;
+ color: #317596;
+ box-shadow: inset 0px 2px 9px 0 #3989B0;
+ -moz-box-shadow: inset 0px 2px 9px 0 #3989B0;
+ -webkit-box-shadow: inset 0px 2px 9px 0 #3989B0;
+ background-color: #52C3FB;
+}
+
+.piano{
+	width: 100px;
+ 	height: 100px;
+}
+
+
+.btn_0_0{
+	background: red;
+	background-image:url('../img/bulbasaur.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_0_1{
+	background: blue;
+	background-image:url('../img/charmander.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_0_2{
+	background: cyan;
+	background-image:url('../img/clefairy.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_1_0{
+	background: yellow;
+	background-image:url('../img/eevee.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_1_1{
+	background: purple;
+	background-image:url('../img/meowth.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_1_2{
+	background: green;
+	background-image:url('../img/pikachu.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_2_0{
+	background: grey;
+	background-image:url('../img/psyduck.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_2_1{
+	background: orange;
+	background-image:url('../img/snorlax.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.btn_2_2{
+	background: pink;
+	background-image:url('../img/squirtle.png');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
