--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,8 +15,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-piano"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Grabados" icon-off="ion-ios-analytics-outline" icon-on="ion-ios-analytics" href="#/tab/grabados">
-    <ion-nav-view name="tab-grabados"></ion-nav-view>
+  <ion-tab title="Grabado" icon-off="ion-ios-analytics-outline" icon-on="ion-ios-analytics" href="#/tab/grabado">
+    <ion-nav-view name="tab-grabado"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
