--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -2,11 +2,6 @@
 
 .login {
     background-color: #F4FA58;
-   	background-image:url('../img/logo.png');
-	background-repeat:no-repeat;
-	background-position: bottom;
-	background-size: auto;
-
 }
 
 .autor{
@@ -14,6 +9,13 @@
 }
 
 .fondo-piano{
+	background-image:url('../img/fondo.jpg');
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.fondo-grabado{
 	background-image:url('../img/fondo.jpg');
 	background-repeat:no-repeat;
 	background-position: center;
@@ -209,5 +211,12 @@ ion-icon{
 	background-size: cover;
 }
 
+.salida{
 
+}
+.salida .popup-title {
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+}
 
