--- a/platforms/android/assets/www/templates/tab-grabado.html
+++ b/platforms/android/assets/www/templates/tab-grabado.html
@@ -1,13 +1,16 @@
 <ion-view view-title="Grabado" class="fondo-grabado">
   <ion-content>
-  <br><br>
-  	<center><div>
-  		<p style="color:black"><strong>Usuario:</strong> {{archivo.usuario}}</p>
-  		<p style="color:black"><strong>Sonidos:</strong></p>
-  		<div ng-repeat="sonido in archivo.sonidos">
-  				<p style="color:black">{{sonido}}</p>
-  		</div>
-  	</div></center>
+    <br>
+    <div ng-repeat="usuario in archivo">
+    	<center>
+    		<p style="color:black"><strong>Usuario:</strong> {{usuario.nombre}}</p>
+    		<p style="color:black"><strong>Sonidos:</strong></p>
+    		<div ng-repeat="sonido in usuario.sonidos track by $index">
+    				<label style="color:black">{{sonido}}</label>
+    		</div>
+        <br>-------------------------------<br>
+    	</div>
+      </center>
 
   </ion-content>
 </ion-view>
