--- a/www/templates/tab-autor.html
+++ b/www/templates/tab-autor.html
@@ -4,8 +4,8 @@
   	<h2>{{autor.nombre}}</h2>
   	<div align="center"><img ng-src="{{autor.foto}}" width="30%" height="30%"></div>
     <br>
-  	<p>Hola! Gracias por instalar la aplicacion!! 
-  	<br>Conoce más de mis proyectos: </p>
+  	<p>Hola! Gracias por instalar la aplicación!! 
+  	<br>Conocé más de mis proyectos: </p>
   	<br>
   	<center><ion-icon class="ion-social-github"><p>{{autor.github}}</p></center>
   	<ion-icon></ion-icon>
